--- a/EmailSenderService/EmailSenderService/presentation.EmailSender.csproj
+++ b/EmailSenderService/EmailSenderService/presentation.EmailSender.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\business.EmaileSender\business.EmaileSender.csproj" />
+    <ProjectReference Include="..\presentation.EmailService\data.EmailService.csproj" />
+  </ItemGroup>
+
 </Project>
